hr.fer.rasip.remes.grammars.expressions.parser/src/hr/fer/rasip/remes/grammars/expressions/parser/RemesActionParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g 2010-02-26 10:42:56

package hr.fer.rasip.remes.grammars.expressions.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class RemesActionParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TRUE", "FALSE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "ASSIGN", "PLUS_A", "MINUS_A", "MUL_A", "DIV_A", "MOD_A", "LT", "LE", "EQ", "NE", "GT", "GE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "EXCL", "AMPAMP", "BARBAR", "LIT_NOT", "LIT_AND", "LIT_OR", "QUESTION", "COLON", "COMMA", "TICK", "IS", "ID", "NAT", "FLOAT", "COMMENT", "WS", "UNARY_PLUS", "UNARY_MINUS", "UNARY_SIGN", "ARRAY"
    };
    public static final int LT=16;
    public static final int LIT_OR=32;
    public static final int MOD=26;
    public static final int DIV_A=14;
    public static final int EXCL=27;
    public static final int FLOAT=40;
    public static final int ID=38;
    public static final int NAT=39;
    public static final int EOF=-1;
    public static final int LIT_NOT=30;
    public static final int LPAREN=6;
    public static final int UNARY_PLUS=43;
    public static final int LBRACKET=8;
    public static final int RPAREN=7;
    public static final int COMMA=35;
    public static final int IS=37;
    public static final int PLUS=22;
    public static final int BARBAR=29;
    public static final int EQ=18;
    public static final int RBRACKET=9;
    public static final int AMPAMP=28;
    public static final int COMMENT=41;
    public static final int ARRAY=46;
    public static final int NE=19;
    public static final int GE=21;
    public static final int TICK=36;
    public static final int MOD_A=15;
    public static final int MINUS_A=12;
    public static final int UNARY_MINUS=44;
    public static final int MINUS=23;
    public static final int TRUE=4;
    public static final int MUL=24;
    public static final int MUL_A=13;
    public static final int COLON=34;
    public static final int WS=42;
    public static final int QUESTION=33;
    public static final int UNARY_SIGN=45;
    public static final int PLUS_A=11;
    public static final int ASSIGN=10;
    public static final int GT=20;
    public static final int LIT_AND=31;
    public static final int DIV=25;
    public static final int FALSE=5;
    public static final int LE=17;

    // delegates
    // delegators


        public RemesActionParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public RemesActionParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return RemesActionParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g"; }


    public static class action_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "action_expression"
    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:24:1: action_expression : ( assignment_expression ( COMMA assignment_expression )* | EOF );
    public final RemesActionParser.action_expression_return action_expression() throws RecognitionException {
        RemesActionParser.action_expression_return retval = new RemesActionParser.action_expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token COMMA2=null;
        Token EOF4=null;
        RemesActionParser.assignment_expression_return assignment_expression1 = null;

        RemesActionParser.assignment_expression_return assignment_expression3 = null;


        Object COMMA2_tree=null;
        Object EOF4_tree=null;

        try {
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:25:3: ( assignment_expression ( COMMA assignment_expression )* | EOF )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                alt2=1;
            }
            else if ( (LA2_0==EOF) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:25:5: assignment_expression ( COMMA assignment_expression )*
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assignment_expression_in_action_expression69);
                    assignment_expression1=assignment_expression();

                    state._fsp--;

                    adaptor.addChild(root_0, assignment_expression1.getTree());
                    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:25:27: ( COMMA assignment_expression )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==COMMA) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:25:28: COMMA assignment_expression
                    	    {
                    	    COMMA2=(Token)match(input,COMMA,FOLLOW_COMMA_in_action_expression72); 
                    	    pushFollow(FOLLOW_assignment_expression_in_action_expression75);
                    	    assignment_expression3=assignment_expression();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, assignment_expression3.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:26:5: EOF
                    {
                    root_0 = (Object)adaptor.nil();

                    EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_action_expression83); 
                    EOF4_tree = (Object)adaptor.create(EOF4);
                    adaptor.addChild(root_0, EOF4_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "action_expression"

    public static class assignment_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assignment_expression"
    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:29:1: assignment_expression : variable assignOp ternary_expression ;
    public final RemesActionParser.assignment_expression_return assignment_expression() throws RecognitionException {
        RemesActionParser.assignment_expression_return retval = new RemesActionParser.assignment_expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RemesActionParser.variable_return variable5 = null;

        RemesActionParser.assignOp_return assignOp6 = null;

        RemesActionParser.ternary_expression_return ternary_expression7 = null;



        try {
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:30:3: ( variable assignOp ternary_expression )
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:30:5: variable assignOp ternary_expression
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_variable_in_assignment_expression98);
            variable5=variable();

            state._fsp--;

            adaptor.addChild(root_0, variable5.getTree());
            pushFollow(FOLLOW_assignOp_in_assignment_expression100);
            assignOp6=assignOp();

            state._fsp--;

            root_0 = (Object)adaptor.becomeRoot(assignOp6.getTree(), root_0);
            pushFollow(FOLLOW_ternary_expression_in_assignment_expression103);
            ternary_expression7=ternary_expression();

            state._fsp--;

            adaptor.addChild(root_0, ternary_expression7.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "assignment_expression"

    public static class invariant_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "invariant_expression"
    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:33:1: invariant_expression : ( ternary_expression | EOF );
    public final RemesActionParser.invariant_expression_return invariant_expression() throws RecognitionException {
        RemesActionParser.invariant_expression_return retval = new RemesActionParser.invariant_expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF9=null;
        RemesActionParser.ternary_expression_return ternary_expression8 = null;


        Object EOF9_tree=null;

        try {
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:34:3: ( ternary_expression | EOF )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=TRUE && LA3_0<=LPAREN)||(LA3_0>=PLUS && LA3_0<=MINUS)||LA3_0==EXCL||LA3_0==LIT_NOT||(LA3_0>=ID && LA3_0<=FLOAT)) ) {
                alt3=1;
            }
            else if ( (LA3_0==EOF) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:34:5: ternary_expression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ternary_expression_in_invariant_expression116);
                    ternary_expression8=ternary_expression();

                    state._fsp--;

                    adaptor.addChild(root_0, ternary_expression8.getTree());

                    }
                    break;
                case 2 :
                    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:35:5: EOF
                    {
                    root_0 = (Object)adaptor.nil();

                    EOF9=(Token)match(input,EOF,FOLLOW_EOF_in_invariant_expression122); 
                    EOF9_tree = (Object)adaptor.create(EOF9);
                    adaptor.addChild(root_0, EOF9_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "invariant_expression"

    public static class ternary_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ternary_expression"
    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:38:1: ternary_expression : or_expression ( QUESTION or_expression COLON or_expression )? ;
    public final RemesActionParser.ternary_expression_return ternary_expression() throws RecognitionException {
        RemesActionParser.ternary_expression_return retval = new RemesActionParser.ternary_expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token QUESTION11=null;
        Token COLON13=null;
        RemesActionParser.or_expression_return or_expression10 = null;

        RemesActionParser.or_expression_return or_expression12 = null;

        RemesActionParser.or_expression_return or_expression14 = null;


        Object QUESTION11_tree=null;
        Object COLON13_tree=null;

        try {
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:39:3: ( or_expression ( QUESTION or_expression COLON or_expression )? )
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:39:5: or_expression ( QUESTION or_expression COLON or_expression )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_or_expression_in_ternary_expression135);
            or_expression10=or_expression();

            state._fsp--;

            adaptor.addChild(root_0, or_expression10.getTree());
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:39:19: ( QUESTION or_expression COLON or_expression )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==QUESTION) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:39:20: QUESTION or_expression COLON or_expression
                    {
                    QUESTION11=(Token)match(input,QUESTION,FOLLOW_QUESTION_in_ternary_expression138); 
                    QUESTION11_tree = (Object)adaptor.create(QUESTION11);
                    root_0 = (Object)adaptor.becomeRoot(QUESTION11_tree, root_0);

                    pushFollow(FOLLOW_or_expression_in_ternary_expression141);
                    or_expression12=or_expression();

                    state._fsp--;

                    adaptor.addChild(root_0, or_expression12.getTree());
                    COLON13=(Token)match(input,COLON,FOLLOW_COLON_in_ternary_expression143); 
                    pushFollow(FOLLOW_or_expression_in_ternary_expression146);
                    or_expression14=or_expression();

                    state._fsp--;

                    adaptor.addChild(root_0, or_expression14.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ternary_expression"

    public static class or_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "or_expression"
    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:42:1: or_expression : and_expression ( orOp and_expression )* ;
    public final RemesActionParser.or_expression_return or_expression() throws RecognitionException {
        RemesActionParser.or_expression_return retval = new RemesActionParser.or_expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RemesActionParser.and_expression_return and_expression15 = null;

        RemesActionParser.orOp_return orOp16 = null;

        RemesActionParser.and_expression_return and_expression17 = null;



        try {
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:43:3: ( and_expression ( orOp and_expression )* )
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:43:5: and_expression ( orOp and_expression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_and_expression_in_or_expression161);
            and_expression15=and_expression();

            state._fsp--;

            adaptor.addChild(root_0, and_expression15.getTree());
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:43:20: ( orOp and_expression )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==BARBAR||LA5_0==LIT_OR) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:43:22: orOp and_expression
            	    {
            	    pushFollow(FOLLOW_orOp_in_or_expression165);
            	    orOp16=orOp();

            	    state._fsp--;

            	    root_0 = (Object)adaptor.becomeRoot(orOp16.getTree(), root_0);
            	    pushFollow(FOLLOW_and_expression_in_or_expression168);
            	    and_expression17=and_expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, and_expression17.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "or_expression"

    public static class and_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "and_expression"
    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:46:1: and_expression : compare_expression ( andOp compare_expression )* ;
    public final RemesActionParser.and_expression_return and_expression() throws RecognitionException {
        RemesActionParser.and_expression_return retval = new RemesActionParser.and_expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RemesActionParser.compare_expression_return compare_expression18 = null;

        RemesActionParser.andOp_return andOp19 = null;

        RemesActionParser.compare_expression_return compare_expression20 = null;



        try {
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:47:3: ( compare_expression ( andOp compare_expression )* )
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:47:5: compare_expression ( andOp compare_expression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_compare_expression_in_and_expression184);
            compare_expression18=compare_expression();

            state._fsp--;

            adaptor.addChild(root_0, compare_expression18.getTree());
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:47:24: ( andOp compare_expression )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==AMPAMP||LA6_0==LIT_AND) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:47:26: andOp compare_expression
            	    {
            	    pushFollow(FOLLOW_andOp_in_and_expression188);
            	    andOp19=andOp();

            	    state._fsp--;

            	    root_0 = (Object)adaptor.becomeRoot(andOp19.getTree(), root_0);
            	    pushFollow(FOLLOW_compare_expression_in_and_expression191);
            	    compare_expression20=compare_expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, compare_expression20.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "and_expression"

    public static class compare_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compare_expression"
    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:50:1: compare_expression : add_expression ( compareOp add_expression )* ;
    public final RemesActionParser.compare_expression_return compare_expression() throws RecognitionException {
        RemesActionParser.compare_expression_return retval = new RemesActionParser.compare_expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RemesActionParser.add_expression_return add_expression21 = null;

        RemesActionParser.compareOp_return compareOp22 = null;

        RemesActionParser.add_expression_return add_expression23 = null;



        try {
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:51:3: ( add_expression ( compareOp add_expression )* )
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:51:5: add_expression ( compareOp add_expression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_add_expression_in_compare_expression207);
            add_expression21=add_expression();

            state._fsp--;

            adaptor.addChild(root_0, add_expression21.getTree());
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:51:20: ( compareOp add_expression )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=LT && LA7_0<=GE)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:51:22: compareOp add_expression
            	    {
            	    pushFollow(FOLLOW_compareOp_in_compare_expression211);
            	    compareOp22=compareOp();

            	    state._fsp--;

            	    root_0 = (Object)adaptor.becomeRoot(compareOp22.getTree(), root_0);
            	    pushFollow(FOLLOW_add_expression_in_compare_expression214);
            	    add_expression23=add_expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, add_expression23.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "compare_expression"

    public static class add_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "add_expression"
    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:54:1: add_expression : multiply_expression ( addOp multiply_expression )* ;
    public final RemesActionParser.add_expression_return add_expression() throws RecognitionException {
        RemesActionParser.add_expression_return retval = new RemesActionParser.add_expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RemesActionParser.multiply_expression_return multiply_expression24 = null;

        RemesActionParser.addOp_return addOp25 = null;

        RemesActionParser.multiply_expression_return multiply_expression26 = null;



        try {
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:55:3: ( multiply_expression ( addOp multiply_expression )* )
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:55:5: multiply_expression ( addOp multiply_expression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_multiply_expression_in_add_expression232);
            multiply_expression24=multiply_expression();

            state._fsp--;

            adaptor.addChild(root_0, multiply_expression24.getTree());
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:55:25: ( addOp multiply_expression )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( ((LA8_0>=PLUS && LA8_0<=MINUS)) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:55:27: addOp multiply_expression
            	    {
            	    pushFollow(FOLLOW_addOp_in_add_expression236);
            	    addOp25=addOp();

            	    state._fsp--;

            	    root_0 = (Object)adaptor.becomeRoot(addOp25.getTree(), root_0);
            	    pushFollow(FOLLOW_multiply_expression_in_add_expression239);
            	    multiply_expression26=multiply_expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, multiply_expression26.getTree());

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "add_expression"

    public static class multiply_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "multiply_expression"
    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:58:1: multiply_expression : sign_expression ( mulOp sign_expression )* ;
    public final RemesActionParser.multiply_expression_return multiply_expression() throws RecognitionException {
        RemesActionParser.multiply_expression_return retval = new RemesActionParser.multiply_expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RemesActionParser.sign_expression_return sign_expression27 = null;

        RemesActionParser.mulOp_return mulOp28 = null;

        RemesActionParser.sign_expression_return sign_expression29 = null;



        try {
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:59:3: ( sign_expression ( mulOp sign_expression )* )
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:59:5: sign_expression ( mulOp sign_expression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_sign_expression_in_multiply_expression257);
            sign_expression27=sign_expression();

            state._fsp--;

            adaptor.addChild(root_0, sign_expression27.getTree());
            // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:59:21: ( mulOp sign_expression )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( ((LA9_0>=MUL && LA9_0<=MOD)) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:59:23: mulOp sign_expression
            	    {
            	    pushFollow(FOLLOW_mulOp_in_multiply_expression261);
            	    mulOp28=mulOp();

            	    state._fsp--;

            	    root_0 = (Object)adaptor.becomeRoot(mulOp28.getTree(), root_0);
            	    pushFollow(FOLLOW_sign_expression_in_multiply_expression264);
            	    sign_expression29=sign_expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, sign_expression29.getTree());

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "multiply_expression"

    public static class sign_expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sign_expression"
    // D:\\Dokumenti\\Faks\\PhD\\galileo\\hr.fer.rasip.remes.grammars.expressions.parser\\grammar\\RemesAction.g:62:1: sign_expression : ( PLUS sign_expression -> ^( UNARY_PLUS[$PLUS, \"UNARY_PLUS\"] sign_expression ) | MINUS sign_expression -> ^( UNARY_MINUS[$MINUS, \"UNARY_MINUS\"] sign_expression ) | unary_expression );
    public final RemesActionParser.sign_expression_return sign_expression() throws RecognitionException {
